--- a/src/pages/markdown-page.mdx
+++ b/src/pages/markdown-page.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Markdown + Tailwind'
-layout: ../layouts/main.astro
+// layout: ../layouts/main.astro
 ---
 
 import Button from '../components/Button.astro';
